[project]
name="be-vision-ad-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python=">=3.12"
dependencies = [
    "anomalib<2",
    "cloudpickle>=3.1.2",
    "colorama>=0.4.6",
    "cuda-toolkit>=13.0.1",
    "einops>=0.8.1",
    "fastcore>=1.8.13",
    "freia>=0.2",
    "imgaug>=0.4.0",
    "ipykernel==6.30.1",
    "jupyter>=1.1.1",
    "kornia>=0.8.1",
    "lightning>=2.5.5",
    "matplotlib>=3.10.7",
    "nbdev>=2.4.6",
    "numpy<2",
    "open-clip-torch>=3.2.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pip>=25.3",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
    "timm>=1.0.20",
    "torchaudio>=2.9.0",
]

#[[tool.uv.index]]
#url = "https://artifactory.intra.infineon.com/artifactory/api/pypi/pypi-pypi-org/simple"
#default = true
